fix nav color and add spacing to contact links

--- a/src/common/nav.css
+++ b/src/common/nav.css
@@ -1,4 +1,4 @@
-li a {
+#root > div > div > nav > div > div.navbar-collapse > ul > li > a {
   color: #24170a !important;
 }
 .navbar-default .navbar-toggle {
